# docs/swagger.yaml
@@ -46,6 +46,26 @@ definitions:
     - password
     - username
     type: object
+  github_com_chenyl99x_toge-api_internal_domain.UpdateSpaceRequest:
+    properties:
+      description:
+        example: 这是一个美好的空间
+        type: string
+      name:
+        example: 我的空间
+        type: string
+      owner_user_id:
+        example: 1
+        type: integer
+      type:
+        example: 情侣空间
+        type: string
+    required:
+    - description
+    - name
+    - owner_user_id
+    - type
+    type: object
   github_com_chenyl99x_toge-api_internal_domain.UpdateUserRequest:
     properties:
       avatar:
@@ -76,20 +96,20 @@ definitions:
         $ref: '#/definitions/gorm.DeletedAt'
       description:
         description: 描述
-        example: 这是一个美好的空间
+        example: 这是一个美好的岛屿
         type: string
       id:
         type: integer
       name:
-        description: 空间名称
-        example: 我的空间
+        description: 岛屿名称
+        example: 我的岛屿
         type: string
       owner_user_id:
-        description: 空间拥有者ID
+        description: 岛屿拥有者ID
         example: 1
         type: integer
       type:
-        description: 空间类型:情侣空间、家庭空间
+        description: 岛屿类型:情侣空间、家庭空间
         example: 情侣空间
         type: string
       updatedAt:
@@ -375,9 +395,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: 创建空间
+      description: 创建岛屿
       parameters:
-      - description: 创建空间请求
+      - description: 创建岛屿请求
         in: body
         name: space
         required: true
@@ -403,16 +423,16 @@ paths:
           description: 服务器错误
           schema:
             $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
-      summary: 创建空间
+      summary: 创建岛屿
       tags:
-      - 空间
+      - 岛屿
   /space/{id}:
     get:
       consumes:
       - application/json
-      description: 获取空间详情
+      description: 获取岛屿详情
       parameters:
-      - description: 空间ID
+      - description: 岛屿ID
         in: path
         name: id
         required: true
@@ -441,9 +461,52 @@ paths:
           description: 服务器错误
           schema:
             $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
-      summary: 获取空间详情
+      summary: 获取岛屿详情
       tags:
-      - 空间
+      - 岛屿
+    put:
+      consumes:
+      - application/json
+      description: 修改岛屿信息，支持修改 name、owner_user_id、type、description 字段
+      parameters:
+      - description: 岛屿ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 修改岛屿请求
+        in: body
+        name: space
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_chenyl99x_toge-api_internal_domain.UpdateSpaceRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 修改成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_chenyl99x_toge-api_internal_model.Space'
+              type: object
+        "400":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
+        "404":
+          description: 岛屿不存在
+          schema:
+            $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/github_com_chenyl99x_toge-api_pkg_response.Response'
+      summary: 修改岛屿信息
+      tags:
+      - 岛屿
   /timezone/available:
     get:
       consumes:
